integrated firebase into application, created sign in page with sign in component and sign in with google

--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -8,7 +8,10 @@
   .logo-container {
     height: 100%;
     width: 70px;
-    padding: 25px;
+    padding: 15px;
+    // height: 70%;
+    // width: 50px;
+    // padding: 25px;
   }
 
   .options {
@@ -20,6 +23,7 @@
 
     .option {
       padding: 10px 15px;
+      cursor: pointer;
     }
   }
 }
