--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 body {
-  font-family: 'Open Sans Condensed', sans-serif;
+  /* font-family: 'Open Sans Condensed', sans-serif; */
+  font-family: 'Roboto Condensed', sans-serif;
   padding: 20px 50px;
 }
 
